# youtube-transcript-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_cli.py
youtube_transcript_cli/: cli.py
