[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-transcript-cli"
version = "0.1.0"
description = "A CLI tool to fetch and display YouTube video transcripts."
authors = [{ name = "NickMystic" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["youtube-transcript-api>=0.6.2"]

[project.scripts]
cap = "youtube_transcript_cli.cli:main"
